syntax = "proto3";

message BasicValidation {
  int32 age = 1 [
    (validate.rules).int32.gte = 18,
    (validate.rules).int32.lte = 120
  ];
  
  string username = 2 [
    (validate.rules).string.min_len = 3,
    (validate.rules).string.max_len = 20
  ];
  
  repeated string tags = 3 [
    (validate.rules).repeated.min_items = 1,
    (validate.rules).repeated.max_items = 10
  ];
}