syntax = "proto3";

import "validate.proto";

message User {
  int32 age = 1 [
    (validate.rules).int32.gte = 18,
    (validate.rules).int32.lte = 120
  ];
  
  string email = 2 [
    (validate.rules).string.contains = "@",
    (validate.rules).string.min_len = 5
  ];
  
  repeated string tags = 3 [
    (validate.rules).repeated.min_items = 1,
    (validate.rules).repeated.max_items = 10
  ];
}

message ApiRequest {
  string user_id = 1 [
    (validate.rules).string.min_len = 3
  ];

  string email = 2 [
    (validate.rules).string.contains = "@"
  ];
}